data/derived/comb/progs/unify/prog4802.ml.out
Characters 112-113:
  let l = h ^ t in
              ^
Error: This expression has type string list
       but an expression was expected of type string
